compiler: Bootstrap Makefiles - Changed to use built binaries rather than installed compiler by default - Set BS_REGEN_COMP to 'installed' to use installed compiler instead (added installed.cf invoking compiler binaries from PATH) - This solves difficulties updating the bootstrap when modifiying core classes (e.g. Class)

--- a/compiler/ecc/Makefile.bootstrap
+++ b/compiler/ecc/Makefile.bootstrap
@@ -31,10 +31,13 @@ CONSOLE = -mconsole
 
 # INCLUDES
 
-_CF_DIR = .configs/
+_CF_DIR = ../../
+ifndef BS_REGEN_COMP
+BS_REGEN_COMP := default
+endif
 
 include $(_CF_DIR)crossplatform.mk
-include $(_CF_DIR)$(TARGET_PLATFORM)-$(COMPILER).cf
+include $(_CF_DIR)$(BS_REGEN_COMP).cf
 
 # POST-INCLUDES VARIABLES
 
