share/applications/ecere.desktop: Fixed ide -> ecere-ide

--- a/share/applications/ecere.desktop
+++ b/share/applications/ecere.desktop
@@ -4,7 +4,7 @@ Name=Ecere IDE
 Type=Application
 Comment=Ecere IDE
 Terminal=false
-Exec=ide
+Exec=ecere-ide
 #Path=$(HOME)
 Icon=ecere
 Categories=Development
