tarball: add support for config.mk which provides a way to define variables like ENABLE_SSL and EDASQLiteCipher so they don't have to be typed every time when building. extract/Makefile: add DISABLE_EXEC_COMPRESSION to disable use of upx. don't set UPX to upx if it's already set to something else.

--- a/ear/extract/Makefile
+++ b/ear/extract/Makefile
@@ -208,10 +208,14 @@ ifndef NOSTRIP
 endif
 ifndef WINDOWS_TARGET
 ifdef EXECUTABLE_TARGET
+  ifndef DISABLE_EXEC_COMPRESSION
 	@-$(call sys_path,$(UPX) $(UPXFLAGS) $(TARGET)) || $(call echo,upx not installed; not compressing.)
+  endif
 endif
 else
+  ifndef DISABLE_EXEC_COMPRESSION
 	@-$(call sys_path,$(UPX) $(UPXFLAGS) $(TARGET)) || $(call echo,upx not installed; not compressing.)
+  endif
 endif
 	$(EAR) aw$(EARFLAGS) $(TARGET) ../../ecere/res/vanilla/ecere/actions/folderNew.png ../../ecere/res/vanilla/ecere/actions/goUp.png "ecere/actions"
 	$(EAR) aw$(EARFLAGS) $(TARGET) ../../ecere/res/vanilla/ecere/devices/computer.png ../../ecere/res/vanilla/ecere/devices/driveHardDisk.png ../../ecere/res/vanilla/ecere/devices/driveRemovableMedia.png ../../ecere/res/vanilla/ecere/devices/mediaFloppy.png ../../ecere/res/vanilla/ecere/devices/mediaOptical.png "ecere/devices"
