--- a/compiler/ecs/Makefile.bootstrap
+++ b/compiler/ecs/Makefile.bootstrap
@@ -140,6 +140,6 @@ wipeclean:
 distclean:
 	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
 
-Makefile.bootstrap: ;
-$(_CF_DIR)crossplatform.mk: ;
-$(_CF_DIR)$(TARGET_PLATFORM)-$(COMPILER).cf: ;
+$(MAKEFILE_LIST): ;
+$(SOURCES): ;
+$(RESOURCES): ;
