--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ matrix:
   exclude:
     - os: osx
       compiler: gcc
+  allow_failures:
+    - os: osx
 
 addons:
   apt:
@@ -36,6 +38,10 @@ addons:
       - libssl-dev
       - libffi-dev
       - libasound2-dev
+
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install openssl ; fi
 
 script:
   - make -j1 V=1 ENABLE_SSL=y
