deps/curl; ecere: Fixed building with libcURL from Makefile - Building curl as a dependency library

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -1,4 +1,4 @@
-.PHONY: freetype jpeg png gif z ffi cleantarget clean realclean distclean
+.PHONY: freetype jpeg png gif z curl ffi cleantarget clean realclean distclean
 .SILENT:
 
 _CF_DIR = ../
@@ -7,7 +7,7 @@ include $(_CF_DIR)crossplatform.mk
 include $(_CF_DIR)default.cf
 
 ifdef WINDOWS_TARGET
-all: freetype jpeg png gif ffi z
+all: freetype jpeg png gif ffi z curl
 else
 ifdef OSX_TARGET
 all: jpeg gif
@@ -36,6 +36,10 @@ z:
 	@$(call echo,Building zlib...)
 	+cd zlib-1.2.8 && $(_MAKE)
 
+curl:
+	@$(call echo,Building libcurl...)
+	+cd curl-7.51.0 && $(_MAKE)
+
 ffi:
 	@$(call echo,Building libffi...)
 	+cd libffi-3.0.11 && $(_MAKE)
@@ -46,6 +50,7 @@ cleantarget:
 	+cd zlib-1.2.8 && $(_MAKE) cleantarget
 	+cd jpeg-9a && $(_MAKE) cleantarget
 	+cd libungif-4.1.1 && $(_MAKE) cleantarget
+	+cd curl-7.51.0 && $(_MAKE) cleantarget
 	+cd libffi-3.0.11 && $(_MAKE) cleantarget
 
 clean:
@@ -54,6 +59,7 @@ clean:
 	+cd zlib-1.2.8 && $(_MAKE) clean
 	+cd jpeg-9a && $(_MAKE) clean
 	+cd libungif-4.1.1 && $(_MAKE) clean
+	+cd curl-7.51.0 && $(_MAKE) clean
 	+cd libffi-3.0.11 && $(_MAKE) clean
 
 realclean:
@@ -62,6 +68,7 @@ realclean:
 	+cd zlib-1.2.8 && $(_MAKE) realclean
 	+cd jpeg-9a && $(_MAKE) realclean
 	+cd libungif-4.1.1 && $(_MAKE) realclean
+	+cd curl-7.51.0 && $(_MAKE) realclean
 	+cd libffi-3.0.11 && $(_MAKE) realclean
 
 distclean:
